--- a/MonsTREC.html
+++ b/MonsTREC.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
+<html lang="en">
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<title></title>
+	<title>MonsTREC</title>
 	<style type='text/css'>
 
 		body {
