--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<title>MonsTREC</title>
+	<title></title>
 	<style type='text/css'>
 
 		body {
@@ -258,4 +258,3 @@
 	//]]></script>
 </body>
 </html>
-
